# proxythingis

./: .gitignore  Cargo.toml  Funny_errors.md  ToDo.md  code_from_yt_video.md  readme.md
archiv/warp-proxy-v1/: Cargo.toml
archiv/warp-proxy-v1/src/: main.rs
archiv/warp-proxy-v2/: Cargo.toml
archiv/warp-proxy-v2/src/: main.rs
archiv/warp-proxy-v3/: Cargo.toml
archiv/warp-proxy-v4/: Cargo.toml
archiv/warp-proxy-v4/src/proxy/: route.rs
archiv/warp-proxy-v4/src/proxyserver/: models.rs  route.rs  server.rs
archiv/warp-proxy-v4/src/stats/: server.rs
archiv/warp-proxy-v5/: .env  Cargo.toml
archiv/warp-proxy-v5/src/config_manager/: server.rs
archiv/warp-proxy-v5/src/db/: db.rs
archiv/warp-proxy-v5/src/proxy/: route.rs
archiv/warp-proxy-v5/src/proxyserver/: server.rs
archiv/warp-proxy-v5/src/server/: server.rs
axum-proxy/: Cargo.toml
axum-proxy/src/: main.rs
axum-rpagwlb/: Cargo.toml
common/: Cargo.toml
common/src/: config_manager_models.rs  db.rs  lib.rs  models.rs  warp_server.rs
frontend-yew/: Cargo.toml  index.html
frontend/feapp/: package.json
frontend/feapp/src/: app.ts  index.html
frontend/html_template/: index.html
frontend/js_crap/: package-lock.json
frontend/js_crap/feapp/: package-lock.json  tsconfig.json
frontend/js_crap/server/: package-lock.json
frontend/server/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
frontend/sycamore/: Cargo.toml  index.html
frontend/sycamore/src/: main.rs
frontend_js/: index.html  index_cheatsheet.html  package-lock.json  package.json  vite.config.js
frontend_js/.vite/deps_temp_fcee618f/: jquery.js  jquery.js.map
frontend_js/fe/: blupp.sh  package-lock.json  package.json  tsconfig.json
frontend_js/fe/public/: index.html
frontend_js/fe/public/js/: proxythingi.js
frontend_js/fe/src/: app.ts  index.html  models.ts
frontend_js/server/: .env  index.js  index.js.map  index.ts  package-lock.json  package.json  tsconfig.json
frontend_js/src/: app.ts  counter.ts  index.html  main.ts  style.css
proxythingi/common/: Cargo.toml
proxythingi/common/src/: config_manager_models.rs  db.rs  lib.rs  models.rs  warp_server.rs
proxythingi/frontend/html_template/: index.html
proxythingi/frontend/js_crap/feapp/src/: app.ts  index.html
proxythingi/frontend/js_crap/server/: index.js.map  index.ts  package.json
proxythingi/frontend/sycamore/: Cargo.toml  index.html
proxythingi/frontend/sycamore/src/: main.rs
proxythingi/warp-proxy-v6/: Cargo.toml
proxythingi/warp-proxy-v6/src/: main.rs
proxythingi/warp-proxy-v6/src/config_manager/: manager.rs
proxythingi/warp-proxy-v6/src/db/: db.rs  db_impl.rs  mod.rs
proxythingi/warp-proxy-v6/src/proxy/: route.rs  server.rs
proxythingi/warp-proxy-v6/src/proxyserver/: db.rs  route.rs  server.rs
proxythingi/warp-proxy-v6/src/server/: mod.rs  server.rs
proxythingi/warp-proxy-v6/src/stats/: db.rs  mod.rs  route.rs  server.rs
response_ok_to_everything/: Cargo.toml
response_ok_to_everything/src/: main.rs
sql/: create_tables.sql  insert_dummy_data.sql  insert_dummy_pserson.sql
too_many_servers/big_file_streaming_response_server/: Cargo.toml
too_many_servers/big_file_streaming_response_server/src/: main.rs
too_many_servers/response_ok_to_everything/: Cargo.toml
too_many_servers/response_ok_to_everything/src/: main.rs
too_many_servers/warp_diesel_postgres_person_server/: .env  Cargo.toml  Readme.md
too_many_servers/warp_diesel_postgres_person_server/migrations/2023-03-16-001537_person/: up.sql
too_many_servers/warp_diesel_postgres_person_server/src/: db.rs  main.rs  models.rs  schema.rs  server.rs
too_many_servers/warp_postgres_dummy_server/: Cargo.toml  Readme.md
too_many_servers/warp_postgres_dummy_server/src/: main.rs  models.rs
too_many_servers/warp_tokio_postgres_person_server/: .env  Cargo.toml  Readme.md
too_many_servers/warp_tokio_postgres_person_server/src/: db.rs  main.rs  models.rs  server.rs
ubuntu/: readme.md  rust_proxy_all_200.service  rust_proxy_warp_tokio_postgres.service  rust_proxythingi_v6.service
ubuntu/nginx/: proxythingi
warp-proxy-v1/: Cargo.toml
warp-proxy-v1/src/: main.rs
warp-proxy-v2/: Cargo.toml  code_from_yt_video.md  code_snipptes.md  code_snipptes2.md
warp-proxy-v2/src/: main.rs
warp-proxy-v3/: Cargo.toml
warp-proxy-v3/src/: main.rs
warp-proxy-v4/: Cargo.toml
warp-proxy-v4/sql/: create_tables.sql  insert_dummy_data.sql
warp-proxy-v4/src/: config_manager.rs  db.rs  main.rs  models.rs  server.rs
warp-proxy-v4/src/config_manager/: manager.rs  server.rs
warp-proxy-v4/src/db/: db.rs
warp-proxy-v4/src/proxy/: mod.rs  route.rs  server.rs
warp-proxy-v4/src/proxyserver/: db.rs  mod.rs  models.rs  route.rs  server.rs
warp-proxy-v4/src/server/: server.rs
warp-proxy-v4/src/stats/: route.rs  server.rs
warp-proxy-v5/: Cargo.toml
warp-proxy-v5/src/: main.rs
warp-proxy-v5/src/config_manager/: manager.rs
warp-proxy-v5/src/db/: db.rs  server.rs
warp-proxy-v5/src/proxy/: route.rs  server.rs
warp-proxy-v5/src/proxyserver/: db.rs  route.rs  server.rs
warp-proxy-v5/src/server/: mod.rs  server.rs
warp-proxy-v5/src/stats/: db.rs  models.rs  route.rs  server.rs
warp-proxy-v6/: Cargo.toml
warp-proxy-v6/src/: main.rs
warp-proxy-v6/src/config_manager/: manager.rs  mod.rs  server.rs
warp-proxy-v6/src/db/: server.rs
warp-proxy-v6/src/proxy/: route.rs  server.rs
warp-proxy-v6/src/proxyserver/: db.rs  mod.rs  models.rs  server.rs
warp-proxy-v6/src/server/: models.rs  server.rs
warp-proxy-v6/src/stats/: db.rs  mod.rs  models.rs  route.rs  server.rs
warp-rpagwlb/: Cargo.toml  code_from_yt_video.md
warp-rpagwlb/src/: main.rs
warp_body_error_madness/: Cargo.toml
warp_body_error_madness/src/: main.rs
