[workspace]
resolver = "2"

members = [
    "proxythingi/warp-proxy-v6",
    "too_many_servers/response_ok_to_everything",
    "too_many_servers/warp_tokio_postgres_person_server",
    "too_many_servers/warp_diesel_postgres_person_server",
    "too_many_servers/big_file_streaming_response_server",
    "proxythingi/common",
    "proxythingi/frontend/sycamore",
]
