[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
tokio = { version = "1.28.0", features = ["fs", "sync", "time"] }
futures = { version = "0.3.28" }
futures-util = { version = "0.3.28" }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.28", default-features = true }

