[package]
name = "warp-proxy-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = { version = "1.0", features = ["fs", "sync", "time"] }
lazy_static = "1.4.0"
tracing = { version = "0.1.37", default-features = false, features = ["log", "std"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
tracing-log = "0.1.3"
futures = { version = "0.3.27" }
futures-util = { version = "0.3.27" }
common = { path = "../common" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.27", default-features = true }
