[package]
name = "warp-proxy-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = { version = "1.0", features = ["fs", "sync", "time"] }
lazy_static = "1.4.0"
futures = { version = "0.3.27" }
futures-util = { version = "0.3.27" }
common = { path = "../common" }
log = "0.4.17"
pretty_env_logger = "0.4.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.27", default-features = true }
