[package]
name = "warp-proxy-v5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = { version = "1.0", features = ["fs", "sync", "time"] }
lazy_static = "1.4.0"
futures = { version = "0.3.27" }
futures-util = { version = "0.3.27" }
common = { path = "../common" }
chrono = { version = "0.4.24", features = ["serde"] }
deadpool-postgres = "0.10.5"
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
dotenvy = "0.15.6"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.156"
thiserror = "1.0.39"
rand = "0.8.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.27", default-features = true }
