[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
warp_server = ["dep:warp", "dep:futures", "dep:futures-util", "dep:tokio"]
db_tokio_postgres = ["dep:tokio-postgres"]
default = []
sycamore_support = ["dep:sycamore"]

[dependencies]
warp = { version = "0.3.5", optional = true }
tokio = { version = "1.26.0", features = ["fs", "sync", "time", "macros", "rt-multi-thread"], optional = true }
futures = { version = "0.3.28", optional = true }
futures-util = { version = "0.3.28", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.160"
chrono = { version = "0.4.24", features = ["serde"] }
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }
sycamore= { version = "0.9.0-beta.1", optional = true }
