[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
warp_server = ["dep:warp", "dep:futures", "dep:futures-util", "dep:tokio"]
db_tokio_postgres = ["dep:tokio-postgres"]
default = []
# sycamore_support = ["dep:sycamore"]

[dependencies]
warp = { version = "0.3.7", optional = true }
tokio = { version = "1.43.0", features = [
    "fs",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
], optional = true }
futures = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio-postgres = { version = "0.7.12", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
], optional = true }