[package]
name = "proxythingi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = { version = "1.36.0", features = ["fs", "sync", "time"] }
lazy_static = "1.4.0"
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30" }
common = { path = "../common", features = ["warp_server", "db_tokio_postgres"] }
chrono = { version = "0.4.34", features = ["serde"] }
deadpool-postgres = "0.12.1"
tokio-postgres = { version = "0.7.10", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.196"
thiserror = "1.0.57"
rand = "0.8.5"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.30", default-features = true }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
