[package]
name = "proxythingi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1.43.0", features = ["fs", "sync", "time"] }
lazy_static = "1.5.0"
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
common = { path = "../common", features = ["warp_server", "db_tokio_postgres"] }
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7.12", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
dotenvy = "0.15.7"
thiserror = "2.0.11"
rand = "0.9.0-beta.3"
log = "0.4.25"
pretty_env_logger = "0.5.0"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.31", default-features = true }

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
