[package]
name = "big_file_streaming_response_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1.43.0", features = ["full"] }
futures-util = { version = "0.3.31" }
log = "0.4.25"
pretty_env_logger = "0.5.0"
futures = { version = "0.3.31" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.31", default-features = true }
