[package]
name = "response_ok_to_everything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
tokio = { version = "1.28.0", features = ["fs", "sync", "time"] }
tokio-postgres = "0.7.7"
futures = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
common = { path = "../../proxythingi/common" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.160"
log = "0.4.17"
pretty_env_logger = "0.4.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.28", default-features = true }
