[package]
name = "response_ok_to_everything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = { version = "1.36", features = ["fs", "sync", "time"] }
tokio-postgres = "0.7.10"
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30" }
common = { path = "../../proxythingi/common", features = ["warp_server"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.196"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.30", default-features = true }
