[package]
name = "response_ok_to_everything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1.43.0", features = ["fs", "sync", "time"] }
common = { path = "../../proxythingi/common", features = ["warp_server"] }
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"
pretty_env_logger = "0.5.0"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
