[package]
name = "warp_diesel_postgres_person_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = { version = "1.0", features = ["fs", "sync", "time"] }
diesel = { version = "2.0.3", features = ["`postgres`", "r2d2"] }
dotenvy = "0.15"
diesel_migrations = "2.0.0"
r2d2 = "0.8.2"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.156"
chrono = { version = "0.4.24", features = ["serde"] }


[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.27", default-features = true }
