[package]
name = "warp_diesel_postgres_person_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
tokio = { version = "1.28.0", features = ["fs", "sync", "time"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
diesel_migrations = "2.0.0"
r2d2 = "0.8.10"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.160"
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.28", default-features = true }
