[package]
name = "warp_diesel_postgres_person_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1.43.0", features = ["full"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
log = "0.4.25"
pretty_env_logger = "0.5.0"
r2d2 = "0.8.10"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
