[package]
name = "warp_tokio_postgres_person_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.196"
chrono = { version = "0.4.34", features = ["serde"] }
deadpool-postgres = "0.12.1"
thiserror = "1.0.57"
dotenvy = "0.15.7"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.30", default-features = true }
