[package]
name = "warp_tokio_postgres_person_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-postgres = "0.14.1"
thiserror = "2.0.11"
dotenvy = "0.15.7"
log = "0.4.25"
pretty_env_logger = "0.5.0"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
